Add QfPagination ui.

--- a/src/qml/qml.qrc
+++ b/src/qml/qml.qrc
@@ -118,5 +118,6 @@
         <file>QFieldGuide.qml</file>
         <file>imports/Theme/QfProgrerssRing.qml</file>
         <file>imports/Theme/QfScrollBar.qml</file>
+        <file>imports/Theme/QfPagination.qml</file>
     </qresource>
 </RCC>
